ビックリマークを入れただけ

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- ▼▼▼ 【Aさん担当: コンセプト＆デザイン】 ▼▼▼ -->
     <header>
         <h1>SHOWA GAKUIN : SA Course</h1>
-        <p>Science Academy - 君の「知りたい」が未来をつくる</p>
+        <p>Science Academy - 君の「知りたい」が未来をつくる！</p>
     </header>
 
     <div class="hero">
